--- a/assets/package.json
+++ b/assets/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-brunch": "^7.0.1",
     "brunch": "3.0.0",
+    "elm-brunch": "0.12.0",
     "clean-css-brunch": "^3.0.0",
     "uglify-js-brunch": "2.10.0"
   }
